<resources>
    <string name="app_name">smartLearnApp</string>
    <string name="nombreApp">Smart Learn</string>
    <string name="inicio_sesion">Iniciar Sesión</string>
    <string name="user">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="recuperar">¿Olvidó su contraseña?</string>
    <string name="registro">¿No tiene cuenta?</string>
    <string name="correo">correo@gmail.com</string>
    <string name="registrar">Registrar Usuario</string>
    <string name="registrar2">Registrar</string>
    <string name="nombre">Nombre Completo</string>
    <string name="correo2">Correo</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Número de teléfono</string>
    <string name="identificación">Número de identificación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cursos">Cursos</string>
    <string name="perfil">Perfil</string>
    <string name="matematicas">Matemáticas Básicas</string>
    <string name="descripcion">Curso básico con temáticas de ecuaciones</string>
    <string name="precio">30.000</string>
    <string name="agregar">Agregar cursos</string>
    <string name="cargar">Cargar imagen</string>
    <string name="nombreCurso">Nombre del curso</string>
    <string name="descripcionn">Descripción</string>
    <string name="valor">Precio</string>
</resources>