<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="2dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_blue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foto"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/matematicas"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/descripcion"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:text="@string/precio"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>